c/examples/writing-a-c-compiler-tests/tests/chapter_10/valid/libraries/internal_hides_external_linkage.c
int x = 10;

int read_x(void){
    return x;
}