c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_parse/missing_parameter_list.c
/* Functions must have parameter lists */
int f {
    return 0
};

int main(void) {
    return 0;
}